pagina inicial como index no cadastrar produto

--- a/cadastro_produto_concluido.html
+++ b/cadastro_produto_concluido.html
@@ -29,7 +29,7 @@
         <section class="cadastro-cartao cartao">
             <span class="cadastro-cartao__icone-concluido"></span>
             <h1 class="cadastro-cartao__titulo cartao__titulo">Cadastro de produto realizado com sucesso!</h1>
-            <a href="./cadastro_produto.html" class="botao">Cadastrar outro produto</a>
+            <a href="./index.html" class="botao">Cadastrar outro produto</a>
         </section>
     </main>
 </body>
