corrigindo cabecalho cadastro produto concluido

--- a/cadastro_produto_concluido.html
+++ b/cadastro_produto_concluido.html
@@ -18,10 +18,10 @@
         <img src="./assets/img/doguitoadm.svg" alt="Logotipo Doguito" class="cabecalho__logo">
         <nav>
             <ul class="cabecalho__lista-navegacao">
-                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="#">Produtos</a></li>
-                <li class="cabecalho__link"><a href="#">Clientes</a></li>
-                <li class="cabecalho__link"><a href="#">Pets</a></li>
+                <li class="cabecalho__link"><a href="./cadastro.html">Dashboard</a></li>
+                <li class="cabecalho__link"><a href="./index.html">Produtos</a></li>
+                <li class="cabecalho__link"><a href="./cadastro.html">Clientes</a></li>
+                <li class="cabecalho__link"><a href="./cadastro.html">Pets</a></li>
             </ul>
         </nav>
     </header>
